--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charSet="utf-8" />
-    <title>
-        大數據highcharts
-    </title>
+    <title>大數據highcharts</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="Data-analysis/reset.css" />
@@ -268,7 +266,6 @@
         </div>
     </div>
 </body>
-
 </html>
 <script type="text/javascript" src="Data-analysis/jquery3.3.1.min.js"></script>
 <script type="text/javascript" src="Data-analysis/highcharts.js"></script>
