--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>大數據highcharts</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="Data-analysis/reset.css" />
     <link rel="stylesheet" href="Data-analysis/style.css" />
     <script type="text/javascript" src="Data-analysis/vue.min.js"></script>
